account-svc/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 9001
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_account
          access_log:
          - name: envoy.file_access_log
            typed_config:
              "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
              path: "/dev/stdout"
          route_config:
            name: local_route
            virtual_hosts:
            - name: account_service
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/v1/accounts/"
                route:
                  cluster: account-gw
              - match:
                  prefix: "/api.Account/"
                route:
                  cluster: account-grpc
              - match:
                  prefix: "/grpc.reflection"
                route:
                  cluster: account-grpc
          http_filters:
          - name: envoy.router
            typed_config: {}
  - address:
      socket_address:
        address: 127.0.0.1
        port_value: 9002
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: egress_account
          access_log:
          - name: envoy.file_access_log
            typed_config:
              "@type": type.googleapis.com/envoy.config.accesslog.v2.FileAccessLog
              path: "/dev/stdout"
          route_config:
            name: remote_route
            virtual_hosts:
            - name: user_service
              domains:
              - "*"
              retry_policy:
                retry_on: "cancelled,connect-failure,gateway-error,refused-stream,reset,resource-exhausted,unavailable"
                num_retries: 2
              routes:
              - match:
                  prefix: "/api.User/"
                route:
                  cluster: user-grpc
          http_filters:
          - name: envoy.router
            typed_config: {}
  clusters:
  - name: account-gw
    connect_timeout: 0.5s
    type: STATIC
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: account-gw
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8080
  - name: account-grpc
    connect_timeout: 0.5s
    type: STATIC
    dns_lookup_family: V4_ONLY
    http2_protocol_options: {}
    load_assignment:
      cluster_name: account-grpc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 8000
    health_checks:
      timeout: 1s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 1
      grpc_health_check: {}
  - name: user-grpc
    connect_timeout: 0.5s
    type: STRICT_DNS
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    load_assignment:
      cluster_name: user-grpc
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: user.grpc-lb.svc.cluster.local
                port_value: 9001
    health_checks:
      timeout: 1s
      interval: 10s
      unhealthy_threshold: 3
      healthy_threshold: 1
      grpc_health_check:
        authority: user.grpc
      event_log_path: "/dev/stdout"
      always_log_health_check_failures: false
admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9000
