account-svc/k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grpc-lb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account
  namespace: grpc-lb
spec:
  replicas: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      name: account
      labels:
        app: account
    spec:
      containers:
      - name: account-grpc
        image: ginuerzh/account-svc:0.0.2
        imagePullPolicy: IfNotPresent
        env:
        - name: GRPC_PORT
          value: "8000"
        - name: USER_ENDPOINT
          value: "127.0.0.1:9002"
        ports:
        - name: grpc
          containerPort: 8000
          protocol: TCP
        readinessProbe:
          periodSeconds: 10
          initialDelaySeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8000"]
        livenessProbe:
          periodSeconds: 10
          initialDelaySeconds: 5
          exec:
            command: ["/bin/grpc_health_probe", "-addr=:8000"]
      - name: account-gw
        image: ginuerzh/account-svc:0.0.2
        imagePullPolicy: IfNotPresent
        env:
        - name: GW_PORT
          value: "8080"
        - name: GRPC_PORT
          value: "9001"
        command:
        - /bin/account-gw
        ports:
        - name: web
          containerPort: 8080
          protocol: TCP
      - name: envoy
        image: envoyproxy/envoy-alpine:v1.12.1
        ports:
        - name: ingress
          containerPort: 9001
        - name: admin
          containerPort: 9000
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
      volumes:
      - name: envoy-config
        configMap:
          name: envoy-account-config
---
apiVersion: v1
kind: Service
metadata:
  name: account
  namespace: grpc-lb
spec:
  selector:
    app: account
  ports:
  - name: api
    port: 9001
    targetPort: 9001
  - name: admin
    port: 9000
    targetPort: 9000
